@@ -1,3 +1,5 @@
+11.may (ws)
+      - fix #10620: Copy&Paste of notes changes flats to sharps
 9.may (ws)
       - text editor additions: indent & lists
 5.may (ws)
